Appium Intellij working