@@ -1,37 +1,38 @@
 package base;
 
 import io.appium.java_client.android.AndroidDriver;
-import org.openqa.selenium.remote.DesiredCapabilities;
 import io.appium.java_client.android.options.UiAutomator2Options;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeMethod;
 
-import java.net.URL;
+import java.net.URI;
 
 public class BaseTest {
 
     protected AndroidDriver driver;
 
+    @BeforeMethod
     public void setup() throws Exception {
-
-        DesiredCapabilities caps =
-                new DesiredCapabilities();
-
-        caps.setCapability("platformName", "Android");
-        caps.setCapability("automationName", "UiAutomator2");
-        caps.setCapability("deviceName", "Android Emulator");
-
-        caps.setCapability(
-                "appPackage",
-                "com.sagradago.sagramob"
+        String appiumServerUrl = System.getenv().getOrDefault(
+                "APPIUM_SERVER_URL",
+                "http://127.0.0.1:4723"
         );
 
-        caps.setCapability(
-                "appActivity",
-                "com.sagradago.sagramob.MainActivity"
-        );
+        UiAutomator2Options options = new UiAutomator2Options()
+                .setPlatformName("Android")
+                .setAutomationName("UiAutomator2")
+                .setDeviceName("Android Emulator")
+                .setAppPackage("com.sagradago.sagramob")
+                .setAppActivity("com.sagradago.sagramob.MainActivity")
+                .setNoReset(true);
 
-        driver = new AndroidDriver(
-                new URL("http://127.0.0.1:4723"),
-                caps
-        );
+        driver = new AndroidDriver(URI.create(appiumServerUrl).toURL(), options);
+    }
+
+    @AfterMethod(alwaysRun = true)
+    public void tearDown() {
+        if (driver != null) {
+            driver.quit();
+        }
     }
 }
